@@ -53,6 +53,9 @@ instance, here is how to test for an expect string that starts with
 zero followed by any number of characters: expect "^[\\]0.*". Closes
 issue #84
 
+Fixed #55: Only run cron style checks once per minute. Minute is the
+lowest resolution in the cron string, but if poll-cycle time is lower
+than one minute the check could run several times in a minute.
 
 
 Version 5.8.1
